--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox tox-gh-actions flake8 codecov black==20.8b1
+        pip install -r requirements.dev.txt
 
     - name: Lint with flake8 and black
       run: |
