enable tox matric for clic 7 and 8

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist =
     flake8,
-    py{36,37,38,39}
+    py{36,37,38,39}-click7
+    py{36,37,38,39}-click8
 
 [testenv:flake8]
 changedir = {toxinidir}
@@ -15,6 +16,8 @@ setenv =
     PIP_INDEX_URL = https://pypi.python.org/simple/
 deps =
     -r requirements.dev.txt
+    click7: click>=7.0,<8.0.0
+    click8: click>=8.0.0,<9.0.0
 
 [gh-actions]
 python =
