drop nosetests, use coverage + unittest

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ deps = flake8
 
 [testenv]
 commands =
-    nosetests --with-coverage
+    coverage run -m unittest discover tests
 setenv =
     PIP_INDEX_URL = https://pypi.python.org/simple/
 deps =
