--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Linter & Tests
+name: Tests
 
 on: [push, pull_request]
 
@@ -7,9 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      max-parallel: 5
+      max-parallel: 6
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10.0']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
+        include:
+          - python-version: 3.6
+            os: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v2
@@ -24,16 +27,19 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.dev.txt
 
-    - name: Lint with flake8 and black
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count
-        black . --check
-
     - name: Run tox tests
       run: |
         # run tests with coverage
         tox
 
     - name: Upload coverage to Codecov
+      if: ${{ matrix.python-version == '3.11' }}
       uses: codecov/codecov-action@v1
+
+    - name: Report test-coverage to DeepSource
+      if: ${{ matrix.python-version == '3.11' }}
+      run: |
+        # Install the CLI
+        curl https://deepsource.io/cli | sh
+        # Send the report to DeepSource
+        ./bin/deepsource report --analyzer test-coverage --key python --value-file coverage.xml
