--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
 envlist =
     flake8,
-    py{36,37,38,39,310}-click7
-    py{36,37,38,39,310}-click8
+    py{36,37,38,39,310,311}-click7
+    py{36,37,38,39,310,311}-click8
 
 [testenv:flake8]
 changedir = {toxinidir}
@@ -25,10 +25,11 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
-    3.10: py310, flake8
+    3.10: py310
+    3.11: py311, flake8
 
 # Configuration for coverage and flake8 is being set in `./setup.cfg`
 [testenv:codecov]
-passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
+passenv = TOXENV CI CODECOV_*
 commands = codecov -e TOXENV
 deps = codecov>=2.1.10
